Fix small alignment issue with slider label

--- a/src/goupile/client/form_page.css
+++ b/src/goupile/client/form_page.css
@@ -231,7 +231,7 @@
 }
 .af_slider > input {
     width: 100%;
-    margin-top: 0.3em;
+    margin: 0.3em 0 2px 0;
     -webkit-appearance: none;
     background: none;
 }
